--- a/booking-microservice-prod.properties
+++ b/booking-microservice-prod.properties
@@ -1,1 +1,5 @@
 booking.property=Booking Profile Prod Updated
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
