--- a/booking-microservice-prod.properties
+++ b/booking-microservice-prod.properties
@@ -1,5 +1,2 @@
 booking.property=Booking Profile Prod Updated
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
+spring.datasource.url=jdbc.mysql://localhost:3306/bookingdb
