--- a/booking-microservice-dev.properties
+++ b/booking-microservice-dev.properties
@@ -1,5 +1,4 @@
-booking.property=Booking Profile Dev Updated
-spring.datasource.url=jdbc:mysql://localhost:3306/bookingdb
+booking.property=Booking Profile Dev Updated for Bus and Message Broker
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
